--- a/sandbox-test/pom.xml
+++ b/sandbox-test/pom.xml
@@ -11,108 +11,12 @@
     <!-- POC that we can run whole sandbox within single JVM and H2 database for performance and debugging easiness -->
     <artifactId>sandbox-test</artifactId>
     <name>Sandbox test artifact</name>
+    <packaging>pom</packaging>
 
-    <properties>
-        <ruleset.basedir>../..</ruleset.basedir>
-    </properties>
-
-
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-
-
-        <!-- https://github.com/adorsys/xs2a FIXME BOOT-INF/LedgersApplication -->
-        <!-- - adorsys/xs2a-connector-examples:5.3.1+ -->
-        <dependency>
-            <groupId>de.adorsys.ledgers</groupId>
-            <artifactId>gateway-app</artifactId>
-            <version>5.4</version>
-        </dependency>
-        <!-- adorsys/xs2a-aspsp-profile:5.3+ AspspProfileApplication -->
-        <dependency>
-            <groupId>de.adorsys.psd2</groupId>
-            <artifactId>aspsp-profile-server</artifactId>
-            <version>5.4</version>
-        </dependency>
-        <!-- adorsys/xs2a-consent-management:5.3 FIXME BOOT-INF/ConsentManagementStandaloneApp -->
-        <dependency>
-            <groupId>de.adorsys.psd2</groupId>
-            <artifactId>cms-standalone-service</artifactId>
-            <version>5.4</version>
-        </dependency>
-
-
-        <!-- https://github.com/adorsys/XS2A-Sandbox -->
-        <!-- adorsys/xs2a-online-banking FIXME BOOT-INF/LedgersXs2aObaApplication -->
-        <dependency>
-            <groupId>de.adorsys.psd2.sandbox</groupId>
-            <artifactId>online-banking-app</artifactId>
-            <version>1.7</version>
-        </dependency>
-        <!-- adorsys/xs2a-tpp-rest-server FIXME BOOT-INF/TppApplication -->
-        <dependency>
-            <groupId>de.adorsys.psd2.sandbox</groupId>
-            <artifactId>tpp-rest-server</artifactId>
-            <version>1.7</version>
-        </dependency>
-        <!-- adorsys/xs2a-certificate-generator FIXME BOOT-INF/CertificateGeneratorApp -->
-        <dependency>
-            <groupId>de.adorsys.psd2.sandbox</groupId>
-            <artifactId>certificate-generator</artifactId>
-            <version>1.7</version>
-        </dependency>
-
-
-        <!-- https://github.com/adorsys/ledgers FIXME BOOT-INF/LedgersApplication -->
-        <!-- adorsys/ledgers:2.0 -->
-        <dependency>
-            <groupId>de.adorsys.ledgers</groupId>
-            <artifactId>ledgers-app</artifactId>
-            <version>2.0</version>
-        </dependency>
-
-
-        <!-- Test only dependencies -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.skyscreamer</groupId>
-            <artifactId>jsonassert</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>boot-inf-repackager</module>
+        <module>repackaged-sandbox</module>
+        <module>e2e-tests</module>
+    </modules>
 </project>
 
