--- a/sandbox-test/e2e-tests/pom.xml
+++ b/sandbox-test/e2e-tests/pom.xml
@@ -18,11 +18,56 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!-- List of SANDBOX applications -->
+        <!-- https://github.com/adorsys/xs2a -->
+        <!-- - adorsys/xs2a-connector-examples:5.3.1+ -->
         <dependency>
-            <groupId>de.adorsys.opba</groupId>
-            <artifactId>repackaged-sandbox</artifactId>
-            <version>${project.version}</version>
+            <groupId>de.adorsys.ledgers</groupId>
+            <artifactId>gateway-app</artifactId>
+            <version>5.4</version>
         </dependency>
+        <!-- adorsys/xs2a-aspsp-profile:5.3+ AspspProfileApplication -->
+        <dependency>
+            <groupId>de.adorsys.psd2</groupId>
+            <artifactId>aspsp-profile-server</artifactId>
+            <version>5.4</version>
+            <classifier>exec</classifier>
+        </dependency>
+        <!-- adorsys/xs2a-consent-management:5.3 -->
+        <dependency>
+            <groupId>de.adorsys.psd2</groupId>
+            <artifactId>cms-standalone-service</artifactId>
+            <version>5.4</version>
+        </dependency>
+
+        <!-- https://github.com/adorsys/XS2A-Sandbox -->
+        <!-- adorsys/xs2a-online-banking -->
+        <dependency>
+            <groupId>de.adorsys.psd2.sandbox</groupId>
+            <artifactId>online-banking-app</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <!-- adorsys/xs2a-tpp-rest-server -->
+        <dependency>
+            <groupId>de.adorsys.psd2.sandbox</groupId>
+            <artifactId>tpp-rest-server</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <!-- adorsys/xs2a-certificate-generator -->
+        <dependency>
+            <groupId>de.adorsys.psd2.sandbox</groupId>
+            <artifactId>certificate-generator</artifactId>
+            <version>1.7</version>
+        </dependency>
+
+        <!-- https://github.com/adorsys/ledgers -->
+        <!-- adorsys/ledgers:2.0 -->
+        <dependency>
+            <groupId>de.adorsys.ledgers</groupId>
+            <artifactId>ledgers-app</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <!-- END -->
 
         <!-- Test only dependencies -->
         <dependency>
