Add capability to check that env is ready

--- a/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-common.yml
+++ b/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-common.yml
@@ -32,3 +32,8 @@ common:
       ledgersgateway: http://localhost:${common.apps.local.ledgersgateway.port}
       onlinebanking: http://localhost:${common.apps.local.onlinebanking.port}
       tpprest: http://localhost:${common.apps.local.tpprest.port}
+
+# Disable JMX to avoid collisions
+spring:
+  jmx:
+    enabled: false
