--- a/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-ledgers-app.yml
+++ b/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-ledgers-app.yml
@@ -5,8 +5,8 @@ localapp:
 spring:
   datasource:
     url: ${common.db.url}
-    username: test-ledgers-app
-    password: test-ledgers-app
+    username: testledgersapp
+    password: testledgersapp
     driver-class-name: ${common.db.driver}
   liquibase:
     enabled: true
