Initial services wiring and allow additional profile specification in  test yaml

--- a/sandbox-test/e2e-tests/pom.xml
+++ b/sandbox-test/e2e-tests/pom.xml
@@ -21,6 +21,7 @@
         <!-- List of SANDBOX applications -->
         <!-- https://github.com/adorsys/xs2a -->
         <!-- adorsys/xs2a-connector-examples:5.3.1+ -->
+        <!-- Alias XS2A -->
         <dependency>
             <groupId>de.adorsys.ledgers</groupId>
             <artifactId>gateway-app</artifactId>
