--- a/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-tpp-rest.yml
+++ b/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-tpp-rest.yml
@@ -13,3 +13,12 @@ spring:
     enabled: true
 server:
   port: ${common.apps.local.tpprest.port}
+
+ledgers-url: ${common.apps.local.mapping.ledgersapp}
+
+iban_generator_bankcode_nisp: 76070025
+iban_generator_bankcode_random: 90000001
+iban_generator_countrycode: DE
+
+# To verify
+server_key: 12345
