--- a/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-consent-mgmt.yml
+++ b/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-consent-mgmt.yml
@@ -15,6 +15,9 @@ server:
 
 server_key: secret123
 
+aspsp-profile:
+  baseurl: ${common.apps.mapping.aspsp}/api/v1
+
 # To verify:
 skip_ssl_certificate_verification: true
 used-non-recurring-consent-expiration:
