--- a/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-ledgers-app.yml
+++ b/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-ledgers-app.yml
@@ -4,7 +4,7 @@ localapp:
 
 spring:
   profiles:
-    active: sandbox
+    active: develop,sandbox
   datasource:
     url: ${common.db.url}
     username: testledgersapp
