--- a/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-ledgers-gateway.yml
+++ b/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-ledgers-gateway.yml
@@ -7,11 +7,16 @@ spring:
     # FIXME: Maybe mock-qwac is not good idea
     active: postgres,mock-qwac,remote
 
-aspsp-profile-baseurl: ${common.apps.local.mapping.aspsp}
-cms-url: ${common.apps.local.mapping.consentmgmt}
-consent-service-baseurl: ${common.apps.local.mapping.consentmgmt}/api/v1
-ledgers-url: ${common.apps.local.mapping.ledgersapp}
-online-baking-url: ${common.apps.local.mapping.onlinebanking}/api/v1/consents/confirm/{userLogin}/{consentId}/{authorizationId}/{tan}
+aspsp-profile:
+  baseurl: ${common.apps.mapping.aspsp}/api/v1
+consent-service:
+  baseurl: ${common.apps.mapping.consentmgmt}/api/v1
+ledgers:
+  url: ${common.apps.mapping.ledgersapp}
+cms:
+  url: ${common.apps.mapping.consentmgmt}
+online-banking:
+  url: ${common.apps.mapping.onlinebanking}/api/v1/consents/confirm/{userLogin}/{consentId}/{authorizationId}/{tan}
 
 # To verify:
 skip_ssl_certificate_verification: true
