--- a/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-online-banking.yml
+++ b/sandbox-test/e2e-tests/src/test/resources/sandbox/application-test-online-banking.yml
@@ -14,11 +14,16 @@ spring:
 server:
   port: ${common.apps.local.onlinebanking.port}
 
-cms-url: ${common.apps.local.mapping.consentmgmt}
-ledgers-url: ${common.apps.local.mapping.ledgersapp}
-oba-url: ${common.apps.local.mapping.onlinebanking}
-self-url: ${common.apps.local.mapping.onlinebanking}
-xs2a-url: ${common.apps.local.mapping.ledgersgateway} # alias port 8089 in dev
+cms:
+  url: ${common.apps.mapping.consentmgmt}
+ledgers:
+  url: ${common.apps.mapping.ledgersapp}
+oba:
+  url: ${common.apps.mapping.onlinebanking}
+self:
+  url: ${common.apps.mapping.onlinebanking}
+xs2a:
+  url: ${common.apps.mapping.ledgersgateway} # alias port 8089 in dev
 
 online-banking-scauiredirect: true
 
