--- a/sandbox-test/e2e-tests/pom.xml
+++ b/sandbox-test/e2e-tests/pom.xml
@@ -10,7 +10,7 @@
 
     <!-- POC that we can run whole sandbox within single JVM and H2 database for performance and debugging easiness -->
     <artifactId>e2e-tests</artifactId>
-    <name>Sandbox test artifact</name>
+    <name>Sandbox (imitates PS2-compliant bank with XS2A) E2E starter</name>
 
     <dependencies>
         <dependency>
