--- a/opba-consent-rest-api/pom.xml
+++ b/opba-consent-rest-api/pom.xml
@@ -21,6 +21,7 @@
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-annotations</artifactId>
+			<version>1.5.23</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
