--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -58,6 +58,41 @@
             <version>${flowable.version}</version>
         </dependency>
 
+        <!-- XS2A Adapter BEGIN -->
+        <dependency>
+            <groupId>de.adorsys.xs2a.adapter</groupId>
+            <artifactId>xs2a-adapter-rest-impl</artifactId>
+            <version>${xs2a-adapter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.adorsys.xs2a.adapter</groupId>
+            <artifactId>xs2a-adapter-service-api</artifactId>
+            <version>${xs2a-adapter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.adorsys.xs2a.adapter</groupId>
+            <artifactId>xs2a-adapter-service-loader</artifactId>
+            <version>${xs2a-adapter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.adorsys.xs2a.adapter</groupId>
+            <artifactId>xs2a-adapter-aspsp-registry</artifactId>
+            <version>${xs2a-adapter.version}</version>
+        </dependency>
+
+        <!-- adapters -->
+
+        <dependency>
+            <groupId>de.adorsys.xs2a.adapter</groupId>
+            <artifactId>adapters</artifactId>
+            <version>${xs2a-adapter.version}</version>
+            <type>pom</type>
+        </dependency>
+        <!-- XS2A Adapter END -->
+
         <!-- Test only dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -103,6 +138,15 @@
             <artifactId>jsonassert</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- BouncyCastle to generate P12 keystores -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.64</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
 
