--- a/core/banking-protocol/src/main/resources/application.yml
+++ b/core/banking-protocol/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/open-banking?currentSchema=banking-protocol
+    url: jdbc:postgresql://localhost:5432/open_banking?currentSchema=banking_protocol
     username: postgres
     password: docker
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: org.postgresql.Driver
     hikari:
-      schema: banking-protocol
+      schema: banking_protocol
+
+pkcs12:
+  keyStore: sample-qwac.keystore
+  password: password
