Implemented sample consent creation flow with flowable

--- a/core/banking-protocol/src/main/resources/application.yml
+++ b/core/banking-protocol/src/main/resources/application.yml
@@ -20,3 +20,6 @@ xs2a-profile:
   adapterId: adorsys-integ-adapter
   idpUrl:
   aspspScaApproaches:
+
+flowable:
+  process-definition-location-prefix: classpath*:/processes/xs2a/
