OBG #16 code coverage during verify again

--- a/last-module-codecoverage/pom.xml
+++ b/last-module-codecoverage/pom.xml
@@ -51,7 +51,7 @@
                 <version>${xml-maven-plugin.version}</version>
                 <executions>
                     <execution>
-                        <phase>test</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>transform</goal>
                         </goals>
