--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,8 @@
         <java.version>11</java.version>
         <pmd.plugin.version>3.10.0</pmd.plugin.version>
 		<spring-boot-dependencies.version>2.1.1.RELEASE</spring-boot-dependencies.version>
-        <swagger.version>2.1.0</swagger.version>
+        <swaggerv3.version>2.1.0</swaggerv3.version>
+        <swagger.version>1.5.23</swagger.version>
         <lombok.version>1.18.10</lombok.version>
         <junit.version>5.3.2</junit.version>
         <xml-maven-plugin.version>1.0.2</xml-maven-plugin.version>
@@ -111,6 +112,12 @@
             <!-- swagger -->
             <dependency>
                 <groupId>io.swagger.core.v3</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swaggerv3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
